--- a/report.html
+++ b/report.html
@@ -16,6 +16,7 @@
     />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/report.css"
     <!--<link rel="stylesheet" href="css/html.css" />-->
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
 
@@ -82,11 +83,11 @@
                 >Home <span class="sr-only">(current)</span></a
                 >
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="budget.html">Budget</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Report</a>
+            <li class="nav-item active">
+                <a class="nav-link" href="report.html">Report</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="account.html">Account</a>
@@ -118,7 +119,7 @@
 
                                 <ul class="bank-list bank-list1">
 
-                                    <li>
+                                    <!-- <li>
                                         <button type="button" id = "button1" class=" btn btn-block budget-list-btn"  onclick="activate(this.id)">
                                             <h4>
                                                 <span>Budget 1</span>
@@ -137,14 +138,14 @@
                                         <button id = "button2" type="button" class=" btn btn-block budget-list-btn" onclick="activate(this.id)">
                                         <h4>
                                             <span>Budget 2</span>
-                                            <span id = "button2a" class="activated"><span><i class="fa fa-check-square " aria-hidden="true"></i></span> Activated</span>
+                                            <span id = "button2a" class="deactivated"><span><i class="fa fa-check-square " aria-hidden="true"></i></span> Activated</span>
 
                                         </h4>
                                         <h6>
                                             <span class="nickname left">Period: 30 days</span>
                                         </h6>
                                         </button>
-                                    </li>
+                                    </li> -->
 
                                     <li>
                                         <button type="button" id = "button3" class=" btn btn-block budget-list-btn" onclick="activate(this.id)">
@@ -336,7 +337,7 @@
                     </div>
 
             </div>
-                <div class="budget-card-view block-activated" id="button2b">
+                <!-- <div class="budget-card-view block-deactivated" id="button2b">
                     <header class="card-header transparent">Budget 2</header>
                     <div class="card-content  budget-block">
 
@@ -486,24 +487,24 @@
                         </ul>
                     </div>
 
-                </div>
-                <div class="budget-card-view block-deactivated" id="button3b">
+                </div> -->
+                <div class="budget-card-view block-activated" id="button3b">
                     <header class="card-header transparent s3">Report</header>
                     <div class="card-content budget-block">
 
 
 
-                        <div class="budget-left-text"><span >Budget Exceeded</span>
-                            <button type="button" id="generateReport">
+                        <div class="budget-left-text"><span >Report Graph</span>
+                            <button type="button" id="generateReport"class="btn btn-lg budget-btn right" data-toggle="tooltip" data-placement="top" data-toggle="modal" data-target="#addModal">
                                 Generate Report
                             </button>
                         </div>
-                        <div class="budget-left-number"><span id="s3a">$0.00</span>
+                        <!-- <div class="budget-left-number"><span id="s3a">$0.00</span>
 
-                        </div>
+                        </div> -->
 
 
-                        <ul>
+                        <!-- <ul>
 
                             <li class="card-balance">
 
@@ -529,13 +530,13 @@
 
 
                                 </ul>
-                            </li>
-                            <div class="card-content">
+                            </li> -->
+                            <!-- <div class="card-content">
                                 Report Graph
-                            </div>
+                            </div> -->
 
 
-                        </ul>
+                        <!-- </ul> -->
 
 
                           <!--Div that will hold the pie chart-->
@@ -575,34 +576,12 @@
                 <div class="modal-body" height>
                     <div class="form-group row">
                         <div class="col-sm-3">Categories</div>
-                        <div class="col-sm-9">
-                          <button id="foodButton">Food</button>
-                          <button id="entertainmentButton">Entertainment</button>
-                          <button id="rentButton">Rent</button>
-                          <button id="onlineShoppingButton">Online Shoppping</button>
-                          <button id="othersButton">Others</button>
-                          <!-- <label class="container" id="foodCheckBox" onclick="changeFood()">Food
-                            <input type="checkbox" ><span class="checkmark"></span>
-                          </label>
-
-                          <label class="container"id="entertainmentCheckBox">Entertainment
-                            <input type="checkbox" onchange="changeEntertainment()">
-                            <span class="checkmark"></span>
-                          </label>
-
-                          <label class="container"id="rentCheckBox">Rent
-                            <input type="checkbox" onclick="changeRent()">
-                            <span class="checkmark"></span>
-                          </label>
-
-                          <label class="container"id="onlineShoppingCheckBox">Online Shopping
-                            <input type="checkbox" onclick="changeOnlineShopping()">
-                            <span class="checkmark"></span>
-                          </label>
-                          <label class="container"id="othersCheckbox">Others
-                            <input type="checkbox" onclick="changeOthers()">
-                            <span class="checkmark"></span>
-                          </label> -->
+                        <div class="reportButtonsList">
+                          <button id="foodButton"class="reportCategoriesButtons">Food</button>
+                          <button id="entertainmentButton"class="reportCategoriesButtons">Entertainment</button>
+                          <button id="rentButton"class="reportCategoriesButtons">Rent</button>
+                          <button id="onlineShoppingButton"class="reportCategoriesButtons">Online Shoppping</button>
+                          <button id="othersButton"class="reportCategoriesButtons">Others</button>
                         </div>
                     </div>
 
@@ -643,11 +622,12 @@
                     </button>
                     <button
                             type="button"
+                            id="generateReport"
                             class="btn btn-primary budget-radius primary-color border-0"
 
-                            onclick="submit()"
+
                     >
-                        Submit
+                        GenerateReport
                     </button>
                 </div>
             </div>
